--- a/apps/console/project.json
+++ b/apps/console/project.json
@@ -32,9 +32,7 @@
         },
         "build-base": {
             "executor": "@nrwl/web:webpack",
-            "outputs": [
-                "{options.outputPath}"
-            ],
+            "outputs": ["{options.outputPath}"],
             "defaultConfiguration": "production",
             "options": {
                 "compiler": "babel",
@@ -179,10 +177,7 @@
         "serve": {
             "executor": "@nrwl/workspace:run-commands",
             "options": {
-                "commands": [
-                    "pnpm nx run console:serve-prepare",
-                    "pnpm nx run console:serve-base"
-                ],
+                "commands": ["pnpm nx run console:serve-prepare", "pnpm nx run console:serve-base"],
                 "cwd": "apps/console",
                 "parallel": false
             }
