add compile, clean commands

--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -17,7 +17,10 @@
         "clean:themes:src": "pnpm rimraf src/themes",
         "compile": "pnpm tsc -p tsconfig.json --incremental",
         "compile:i18n": "pnpm tsc -p src/extensions/i18n",
+        "compile:i18n-idp": "pnpm tsc -p src/features/identity-providers/i18n",
+        "build:i18n-idp": "node scripts/i18n-idp.js",
         "clean:i18n:dist": "rimraf src/extensions/i18n/dist",
+        "clean:i18n-idp:dist": "rimraf src/features/identity-providers/i18n/dist",
         "copy:themes:src": "node scripts/copy-themes-to-source.js",
         "copy:branding:i18n:defaults": "node scripts/populate-branding-i18n-defaults.js",
         "lint": "pnpm run lint:all",
@@ -30,7 +33,7 @@
         "postbuild": "node scripts/post-build.js",
         "poststart": "pnpm run postbuild",
         "start": "pnpm prestart && pnpm nx run console:serve && pnpm poststart",
-        "test": "jest --passWithNoTests",
+        "test": "pnpm jest --passWithNoTests",
         "test:watch": "pnpm run test --watchAll",
         "start:profile": "pnpm run start -- --env ENABLE_BUILD_PROFILER=true",
         "start:verbose": "pnpm run start -- --env LOG_LEVEL=verbose",
